# rpg-framework

./: .gitignore  Jenkinsfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  prometheus.yml
backend/: .env  Cargo.toml  Dockerfile
backend/content/artifacts/: ancient_blade.toml
backend/content/regions/: enchanted_forest.toml  nexus.toml
backend/migrations/: create_items_table.sql  create_minions_table.sql  create_pets_table.sql  create_players_table.sql  create_skills_table.sql  create_vehicle_table.sql  migration.sql
backend/src/: config.rs  db.rs  main.rs  startup.rs
backend/src/api/: auth.rs  game.rs  inventory.rs  mod.rs  player.rs
backend/src/db/: db.rs  mod.rs  seed.rs
backend/src/engine/: game_logic.rs  inventory_logic.rs  map_graph.rs  mod.rs  worldgen.rs
backend/src/loader/: artifacts.rs  dungeons.rs  mod.rs
backend/src/models/: artifact.rs  character.rs  character_class.rs  dungeon.rs  inventory.rs  item.rs  mod.rs  player.rs  portal.rs  quest.rs  region.rs
backend/src/procedural/: world_generator.rs
backend/src/routes/: health.rs  mod.rs
documentation/: DevMode  Grafana-Prometheus  Migrations  SOPS  Skills  TestPlan-ItemProperties  Testing-FrontBack  Testing-Inventory  age  architecture  backend  backend-override  buildx  db  docker-compose  dungeon  gitea  jenkins  jenkins-docker.images  jenkinsfile-multicontainer  keycloak  keycloak-cicd  procedural  src  traefik-jenkins
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js
jenkins/: Jenkinsfile
(+3 files in other folders)
