[package]
name = "text_rpg_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.4"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
